@@ -1,5 +1,8 @@
+import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
+
 plugins {
-    kotlin("jvm") version "1.3.71"
+    kotlin("jvm") version "1.4-M1"
+    id("com.adarshr.test-logger") version "2.0.0"
     idea
 }
 
@@ -8,33 +11,60 @@ version = "1.0-SNAPSHOT"
 
 repositories {
     jcenter()
-    maven(url = "http://dl.bintray.com/kotlin/kotlin-eap")
+    maven("https://dl.bintray.com/kotlin/kotlin-eap")
 }
 
 dependencies {
     implementation(kotlin("stdlib-jdk8"))
     implementation(kotlin("script-runtime"))
 
-    testImplementation("org.junit.jupiter:junit-jupiter:+")
+    implementation("io.github.microutils:kotlin-logging:+")
+    runtimeOnly("org.apache.logging.log4j:log4j-core:+")
+    runtimeOnly("org.apache.logging.log4j:log4j-slf4j-impl:+")
+
+    testImplementation("org.junit.jupiter:junit-jupiter-api:+")
+    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:+")
     //testImplementation("org.amshove.kluent:kluent:+")
     testImplementation("io.kotest:kotest-runner-junit5-jvm:+") // for kotest framework
     testImplementation("io.kotest:kotest-assertions-core-jvm:+") // for kotest core jvm assertions
-    testImplementation("org.slf4j:slf4j-simple:+")
+}
+
+java {
+    sourceCompatibility = JavaVersion.VERSION_14
+}
+
+tasks.withType<JavaCompile> {
+    options.compilerArgs.addAll(arrayOf("--enable-preview"))
+}
+
+tasks.withType<KotlinCompile> {
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_13.toString()
+        freeCompilerArgs = listOf("-Xjsr305=strict", "-Xjvm-default=enable")
+    }
 }
 
 tasks.withType<Test> {
-    useJUnitPlatform()
+    useJUnitPlatform {
+        excludeEngines("junit-vintage")
+    }
+    jvmArgs("--enable-preview")
 }
 
-tasks {
-    compileKotlin {
-        kotlinOptions.jvmTarget = JavaVersion.VERSION_13.toString()
-    }
-    compileJava {
-        sourceCompatibility = JavaVersion.VERSION_13.toString()
-        targetCompatibility = JavaVersion.VERSION_13.toString()
-    }
-    compileTestKotlin {
-        kotlinOptions.jvmTarget = JavaVersion.VERSION_13.toString()
-    }
+testlogger {
+    setTheme("mocha")
+    showExceptions=true
+    showStackTraces=true
+    showFullStackTraces=false
+    showCauses=true
+    slowThreshold=2000
+    showSummary=true
+    showSimpleNames=true
+    showPassed=true
+    showSkipped=true
+    showFailed=true
+    showStandardStreams=true
+    showPassedStandardStreams=true
+    showSkippedStandardStreams=true
+    showFailedStandardStreams=true
 }
